--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -80,107 +80,7 @@
     <header class="cabecera">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm" style="padding: 0px;">
             <div class="cabecera-poner cuerpo-ancho">
-                <div class="menu-dropdown">
-                    <button class="texto-cabecera" style="border: 0px; margin-left: 0px; margin-right: 30px;"><i class="fa-solid fa-bars" style="font-size: 20px; line-height: 40px;"></i></button>
-                    <div class="menu-dropdown-contenido">
-
-                        @if (usuarioLogeado == true)
-                        {
-                            <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Email">
-                                <div style="display: flex; align-items: center;">
-                                    @if (string.IsNullOrEmpty(usuario!.Avatar) == true)
-                                    {
-                                        <div>@usuario.Email</div>
-                                    }
-                                    else
-                                    {
-                                        @if (usuario.Avatar.ToLower().Contains(".jpg") == true || usuario.Avatar.ToLower().Contains(".jpeg") == true || usuario.Avatar.ToLower().Contains(".png") == true || usuario.Avatar.ToLower().Contains(".webp") == true)
-                                        {
-                                            <img src="@usuario.Avatar" style="max-height: 32px; max-width: 32px;" />
-                                            <div style="margin-left: 15px;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Account")</div>
-                                        }
-                                        else
-                                        {
-                                            <div>@usuario.Email</div>
-                                        }
-                                    }
-                                </div>
-                            </a>
-                            
-                            <a class="texto-cabecera menu-dropdown-item" asp-page="/wishlist">
-                                @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Wishlist")
-                            </a>
-
-                            <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                                <button id="logout" type="submit" class="texto-cabecera menu-dropdown-item" style="text-align: left; border: 0; width: 100%;">
-                                    @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Logout")
-                                </button>
-                            </form>                           
-                        }
-                        else
-                        {
-                            <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Login">
-                                @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Login")
-                            </a>
-                            <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Register">
-                                @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Register")
-                            </a>
-                        }
-
-                        <hr>
-
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/historical-lows">
-                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.HistoricalLows")
-                        </a>                       
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/bundles">
-                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Bundles")
-                        </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/free">
-                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Free")
-                        </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/subscriptions">
-                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Subscriptions")
-                        </a>
-                        <hr>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/giveaways">
-                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Giveaways")
-                        </a>
-                        <hr>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/last-news">
-                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastNews")
-                        </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/last-added">
-                            @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastAdded")
-                        </a>
-                    </div>
-                </div>
-
-                <a class="texto-logo" asp-page="/Index">pepeizq's deals</a>
-
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1" style="align-items: center; margin-top: 0px;">
-                        @if (usuarioLogeado == true && adminLogeado == true)
-                        {
-                            @(await Html.RenderComponentAsync<Componentes.Admin.Maestro>(RenderMode.Server))
-                        }
-
-                        <li class="nav-item">
-                            <div style="display: flex; flex-direction: row; align-items: center;">
-                                @(await Html.RenderComponentAsync<Componentes.Secciones.CabeceraBuscador>(RenderMode.ServerPrerendered, new { idioma = idioma }))
-                            </div>
-                        </li> 
-                    </ul>
-                </div>
-
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <div style="display: flex; align-items: center; justify-content: center; font-size: 20px; text-align: center;">
-                        <div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
-                        <div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
-                        <div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
-                        <div style="margin-left: 6px; margin-right: 6px;"><a href="@twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
-                        <div style="margin-left: 6px; margin-right: 6px;"><a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
-                    </div>
-                </div>
+                @(await Html.RenderComponentAsync<Componentes.Secciones.Cabecera>(RenderMode.ServerPrerendered, new { idioma = idioma, adminLogeado = adminLogeado, discord = discord, telegram = telegram, reddit = reddit, twitter = twitter, steam = steam }))
             </div>
         </nav>
     </header>
