--- a/pepeizqs deals web/Pages/api.cshtml
+++ b/pepeizqs deals web/Pages/api.cshtml
@@ -8,80 +8,4 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<div style="font-size: 23px; text-align: left; margin-bottom: 30px;">
-	@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.Title")
-</div>
-
-<div class="perfil" style="margin-bottom: 40px;">
-	<div style="font-size: 20px;">
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String1")
-	</div>
-
-	<hr />
-
-	<div>
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String2")
-
-		<div style="padding: 10px 15px; background-color: var(--fondoCodigo); margin-top: 20px; margin-bottom: 20px;">
-			<label style="text-decoration: none;">https://pepeizqdeals.com/game/<label style="text-decoration: underline;">6391</label>/Cyberpunk_2077/</label>
-		</div>
-
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String3")
-
-		<div style="padding: 10px 15px; background-color: var(--fondoCodigo); margin-top: 20px;">
-			<label style="text-decoration: none;">https://pepeizqdeals.com/api/game/6391</label>
-		</div>
-	</div>
-</div>
-
-<div class="perfil" style="margin-bottom: 40px;">
-	<div style="font-size: 20px;">
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String4")
-	</div>
-
-	<hr />
-
-	<div>
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String5")
-
-		<div style="padding: 10px 15px; background-color: var(--fondoCodigo); margin-top: 20px;">
-			<label style="text-decoration: none;">https://pepeizqdeals.com/steam/<label style="text-decoration: underline;">1091500</label></label>
-		</div>
-
-		<div style="padding: 10px 15px; background-color: var(--fondoCodigo); margin-top: 5px; margin-bottom: 20px;">
-			<label style="text-decoration: none;">https://store.steampowered.com/app/<label style="text-decoration: underline;">1091500</label>/Cyberpunk_2077/</label>
-		</div>
-
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String6")
-
-		<div style="padding: 10px 15px; background-color: var(--fondoCodigo); margin-top: 20px;">
-			<label style="text-decoration: none;">https://pepeizqdeals.com/api/steam/1091500</label>
-		</div>
-	</div>
-</div>
-
-<div class="perfil" style="margin-bottom: 40px;">
-	<div style="font-size: 20px;">
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String7")
-	</div>
-
-	<hr />
-
-	<div>
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String8")
-
-		<div style="padding: 10px 15px; background-color: var(--fondoCodigo); margin-top: 20px;">
-			<label style="text-decoration: none;">https://pepeizqdeals.com/gog/<label style="text-decoration: underline;">cyberpunk_2077</label></label>
-		</div>
-
-		<div style="padding: 10px 15px; background-color: var(--fondoCodigo); margin-top: 5px; margin-bottom: 20px;">
-			<label style="text-decoration: none;">https://www.gog.com/game/<label style="text-decoration: underline;">cyberpunk_2077</label></label>
-		</div>
-
-		@Herramientas.Idiomas.CogerCadena(Model.idioma, "Api.String9")
-
-		<div style="padding: 10px 15px; background-color: var(--fondoCodigo); margin-top: 20px;">
-			<label style="text-decoration: none;">https://pepeizqdeals.com/api/gog/cyberpunk_2077</label>
-		</div>
-	</div>
-</div>
+@(await Html.RenderComponentAsync<Componentes.Secciones.Api>(RenderMode.ServerPrerendered, new { idioma = Model.idioma }))
