--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Logout.cshtml
@@ -7,7 +7,8 @@
 @inject SignInManager<Usuario> SignInManager
 
 @functions {
-    public async Task<IActionResult> OnPost()
+
+    public async Task<IActionResult> OnGet()
     {
         if (SignInManager.IsSignedIn(User))
         {
