--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -97,239 +97,7 @@
 					</div>	
 				</div>
 
-				@if (bundleSeleccionado.Tiers.Count > 0)
-				{
-					decimal totalMinimos = 0;
-
-					foreach (var tier in OrdenarTiers(bundleSeleccionado.Tiers))
-					{
-						<div class="perfil" style="margin-bottom: 20px; padding: 5px; background-color: transparent;">
-							@{
-								List<Bundles2.BundleJuego> juegosTier = new List<Bundles2.BundleJuego>();
-
-								foreach (var juego in bundleSeleccionado.Juegos)
-								{
-									if (juego.Tier.Posicion == tier.Posicion)
-									{
-										juegosTier.Add(juego);
-									}
-								}
-
-								if (juegosTier.Count > 0)
-								{
-									juegosTier = juegosTier.OrderBy(x => x.Nombre).ToList();
-								}
-
-								if (bundleSeleccionado.Pick == true)
-								{
-									<div style="font-size: 18px; margin-bottom: 20px;">
-										@((MarkupString)MostrarMensajePick(bundleSeleccionado.Tiers))
-									</div>									
-								}
-								else
-								{
-									<div style="font-size: 18px; margin-bottom: 5px;">
-										@MostrarTierPrecio(tier)
-									</div>
-
-									foreach (var juego in juegosTier)
-									{
-										if (juego.Juego.PrecioMinimosHistoricos != null)
-										{
-											foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
-											{
-												if (historico.DRM == juego.DRM)
-												{
-													totalMinimos = totalMinimos + historico.Precio;
-
-													break;
-												}
-											}
-										}
-									}
-
-									<div style="font-size: 14px; margin-bottom: 20px;">
-										@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String14"): @ArreglarPrecio(totalMinimos)
-									</div>
-								}
-
-								foreach (var juego in juegosTier)
-								{
-									bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
-									bool usuarioTieneDeseado = false;
-
-									string fondoColor = string.Empty;
-
-									if (usuarioTieneJuego == true)
-									{
-										fondoColor = "background-color: var(--fondoBien);";
-									}
-									else
-									{
-										usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
-
-										if (usuarioTieneDeseado == true)
-										{
-											fondoColor = "background-color: var(--fondoAlerta);";
-										}
-									}
-
-									bool usuarioConectado = false;
-
-									if (usuario != null)
-									{
-										usuarioConectado = true;
-									}
-
-									Herramientas.ToolTipDatos tooltipDatos = Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado);
-
-									<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
-										<div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno">
-											@if (string.IsNullOrEmpty(tooltipDatos.Video) == false)
-											{
-												<video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
-											}
-
-											<div style="padding: 15px; text-align: center;">
-												<div style="text-align: center;">
-													@tooltipDatos.Nombre
-												</div>
-
-												@if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
-												{
-													<div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
-														<img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" alt="Reviews"/>
-														<label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
-													</div>
-												}
-
-												@if (string.IsNullOrEmpty(tooltipDatos.UsuarioMensaje) == false)
-												{
-													<div style="text-align: center;">
-														@tooltipDatos.UsuarioMensaje
-													</div>
-												}
-											</div>
-										</div>
-
-										<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; margin-bottom: 20px; position: relative; @fondoColor">
-											<div style="display: flex; align-items: center; padding: 2px;">
-												<div style="text-align: center; width: 17%;">
-													<img src="@juego.Imagen" style="width: 100%; height: 100%;" alt="@juego.Nombre"/>
-												</div>
-
-												<div style="padding-left: 20px; padding-right: 20px; text-align: left;">
-													<div style="margin-bottom: 7px; font-size: 17px;">
-														@juego.Nombre
-													</div>
-
-													<div style="display: flex; align-items: center;">
-														<div>
-															<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" alt="DRM"/>
-														</div>
-
-														@if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
-														{
-															<div style="margin-left: 15px; font-size: 14px; background: var(--fondoDlc);">
-																<span style="padding: 4px 6px; line-height: 24px; vertical-align: middle;">@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String15")</span>
-															</div>
-														}
-													</div>
-												</div>
-
-												<div style="margin-left: auto; margin-right: 15px; display: flex; align-items: center;">
-													@{
-														if (juego.Juego.PrecioMinimosHistoricos != null)
-														{
-															foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
-															{
-																if (historico.DRM == juego.DRM)
-																{
-																	<div style="padding-left: 20px; text-align: center;">
-																		<div style="margin-bottom: 5px;">
-																			@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String9")
-																		</div>
-
-																		<div>
-																			@ArreglarPrecio(historico.Precio)
-																		</div>
-																	</div>
-
-																	break;
-																}
-															}
-														}
-
-														int bundlesEstado = 0;
-
-														if (juego.Juego.Bundles != null)
-														{
-															bundlesEstado = juego.Juego.Bundles.Count;
-
-															if (bundlesEstado > 0)
-															{
-																bundlesEstado -= 1;
-															}
-														}
-
-														<div style="padding-left: 20px; text-align: center;">
-															<div style="margin-bottom: 5px;">
-																@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String10")
-															</div>
-
-															<div>
-																@bundlesEstado
-															</div>
-														</div>
-
-														int gratisEstado = 0;
-
-														if (juego.Juego.Gratis != null)
-														{
-															gratisEstado = juego.Juego.Gratis.Count;
-														}
-
-														<div style="padding-left: 20px; text-align: center;">
-															<div style="margin-bottom: 5px;">
-																@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String11")
-															</div>
-
-															<div>
-																@gratisEstado
-															</div>
-														</div>
-
-														int suscripcionesEstado = 0;
-
-														if (juego.Juego.Suscripciones != null)
-														{
-															suscripcionesEstado = juego.Juego.Suscripciones.Count;
-														}
-
-														<div style="padding-left: 20px; text-align: center;">
-															<div style="margin-bottom: 5px;">
-																@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String12")
-															</div>
-
-															<div>
-																@suscripcionesEstado
-															</div>
-														</div>
-													}
-												</div>
-											</div>
-										</a>
-									</div>
-								}
-							}
-						</div>
-
-						@if (bundleSeleccionado.Pick == true)
-						{
-							break;
-						}
-					}
-				}
+				<Bundle bundleId="@bundleSeleccionado.Id" idioma="@idioma" modulo="true" />
 			}
 		</div>
 	}
@@ -595,46 +363,6 @@
 		return Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String7") + " • " + fechaEmpieza.Day.ToString() + "/" + fechaEmpieza.Month.ToString() + "/" + fechaEmpieza.Year.ToString() + " • " + fechaTermina.Day.ToString() + "/" + fechaTermina.Month.ToString() + "/" + fechaTermina.Year.ToString();
 	}
 
-	private string MostrarTierPrecio(Bundles2.BundleTier tier)
-	{
-		string mensaje = "Tier " + tier.Posicion.ToString() + " • ";
-
-		string precio = tier.Precio;
-		precio = precio.Replace(".", ",");
-		precio = precio + "€";
-
-		return mensaje + precio;
-	}
-
-	private List<Bundles2.BundleTier> OrdenarTiers(List<Bundles2.BundleTier> tiers)
-	{
-		if (tiers != null)
-		{
-			tiers.Sort(delegate (Bundles2.BundleTier t1, Bundles2.BundleTier t2)
-			{
-				return t1.Posicion.CompareTo(t2.Posicion);
-			});
-		}
-
-		return tiers;
-	}
-
-	private string MostrarMensajePick(List<Bundles2.BundleTier> tiers)
-	{
-		string mensaje = string.Empty;
-
-		foreach (var tier in tiers)
-		{
-			string precio = tier.Precio;
-			precio = precio.Replace(".", ",");
-			precio = precio + "€";
-
-			mensaje = mensaje + "<div>" + tier.CantidadJuegos.ToString() + "  " + Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String8") + " • " + precio + "</div>";
-		}
-
-		return mensaje;
-	}
-
 	private async void SeleccionarBundle(MouseEventArgs e, Bundles2.Bundle nuevoBundle)
 	{
 		bundleSeleccionado = nuevoBundle;
@@ -654,29 +382,5 @@
 		mostrarBundleSeleccionado = false;
 
 		await JavaScript.InvokeVoidAsync("moverScroll", "cuerpazo");
-	}
-
-	private string ArreglarPrecio(decimal precioDecimal)
-	{
-		string precio = precioDecimal.ToString("#.##");
-
-		if (precio.IndexOf(".") == 0)
-		{
-			precio = "0" + precio;
-		}
-		else if (precio.IndexOf(".") == -1)
-		{
-			precio = precio + ",00";
-		}
-
-		if (precio.Length == precio.IndexOf(".") + 2)
-		{
-			precio = precio + "0";
-		}
-
-		precio = precio.Replace(".", ",");
-		precio = precio + "€";
-
-		return precio;
 	}
 }
