--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -95,8 +95,8 @@
                 </div>
 
                 <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; text-align: center; margin-bottom: 20px; position: relative; @fondoColor" target="_blank">
-                    <div style="display: flex; align-items: center; padding: 10px;">
-                        <div style="text-align: center; width: 17%;">
+                    <div style="display: flex; align-items: center; padding: 2px 15px 2px 2px;">
+                        <div style="text-align: center; width: 19%;">
                             <img src="@juego.Imagen" style="width: 100%; height: 100%;" alt="@juego.Nombre"/>
                         </div>
 
