--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -564,9 +564,9 @@ else
 
 	private List<Juegos.Juego> juegosMinimosMostrar = new List<Juegos.Juego>();
 
-	private List<Noticia> noticiasMostrar = new List<Noticia>();
-	private List<Noticia> noticiasGestor = new List<Noticia>();
-	private List<Noticia> noticiaEvento = new List<Noticia>();
+	private List<Noticias.Noticia> noticiasMostrar = new List<Noticias.Noticia>();
+	private List<Noticias.Noticia> noticiasGestor = new List<Noticias.Noticia>();
+	private List<Noticias.Noticia> noticiaEvento = new List<Noticias.Noticia>();
 
 	private List<Sorteos2.Sorteo> sorteosActivos = new List<Sorteos2.Sorteo>();
 
@@ -687,7 +687,7 @@ else
 				{
 					noticiasGestor = noticiasGestor.OrderBy(x => x.FechaEmpieza).Reverse().ToList();
 
-					foreach (Noticia noticia in noticiasGestor)
+					foreach (Noticias.Noticia noticia in noticiasGestor)
 					{
 						if (noticia.Enlace == null)
 						{
@@ -733,7 +733,7 @@ else
 		}
 	}
 
-	private string SacarNoticiaNuevaPestaña(Noticia noticia)
+	private string SacarNoticiaNuevaPestaña(Noticias.Noticia noticia)
 	{
 		if (noticia.Enlace != null)
 		{
@@ -987,7 +987,7 @@ else
 		return mensaje;
 	}
 
-	private string CargarEnlaceNoticia(Noticia noticia)
+	private string CargarEnlaceNoticia(Noticias.Noticia noticia)
 	{
 		string enlace = string.Empty;
 
@@ -1003,7 +1003,7 @@ else
 		return enlace;
 	}
 
-	private string CargarIconoNoticia(Noticia noticia)
+	private string CargarIconoNoticia(Noticias.Noticia noticia)
 	{
 		string icono = string.Empty;
 
@@ -1023,7 +1023,7 @@ else
 		return icono;
 	}
 
-	private string CargarFondoNoticia(Noticia noticia)
+	private string CargarFondoNoticia(Noticias.Noticia noticia)
 	{
 		string imagen = null;
 
