--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -399,16 +399,16 @@
 }
 
 .buscador-panel {
-    height: 90%;
+    height: 100%;
     width: 100%;
     left: 0;
     top: 0;
     overflow-x: auto;
     position: fixed;
     z-index: 1000;
-    margin-top: 5%;
+    margin-top: 70px;
     padding: 10px;
-    background-color: var(--fondoOscuroTransparente);
+    backdrop-filter: blur(20px);
 }
 
 .juego-galeria-contenedor {
